--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+    //Coroutines
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0'
 }
