--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0'
     //Expandable TextView
     implementation 'io.github.glailton.expandabletextview:expandabletextview:1.0.3'
+    //Exo Player
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.7'
 }
